--- a/Trabajos/Práctica/Wattpad/index.html
+++ b/Trabajos/Práctica/Wattpad/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="grid-cointener">
+    
         <div class="header">
             <ul>
                 <li><img class="logo" src="Wattpad_logo.png" height="48px"></li>
@@ -40,11 +40,12 @@
                 </li>
 
                 <li  style="float:right" class="dropdown">
+                    <img class="perfil" src="yoongi.jpg" alt="">
                     <a class="dropbtn">perita_lexa</a>
                     <div class="dropdown-content">
                         <a ref="#">Mi perfil   </a>
                     </div>
-                </li>
+                </li>   
 
                 <li class="prem" style="float: right" >
                     <a id="premium">
@@ -70,7 +71,7 @@
             </ul>
 
         </div>
-    </div>
+  
     
 </body>
 </html>
